--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=carniceria
 
-# Configuraci\u00f3n de MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/bdcarniceria
+# Configuración de MySQL (Railway)
+spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:13189/bdcarniceria
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=XwKRuZidQEHyYcvxyATvSEFjsnaJoCBs
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
