--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.1</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.36.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
