--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=carniceria
 
 # Configuración de MySQL (Railway)
-spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:13189/bdcarniceria
+spring.datasource.url=jdbc:mysql://localhost:3306/bdcarniceria
 spring.datasource.username=root
-spring.datasource.password=XwKRuZidQEHyYcvxyATvSEFjsnaJoCBs
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
@@ -26,3 +26,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
 spring.servlet.multipart.enabled=true
+
+# Cloudinary Configuration
+cloudinary.cloud-name=dxtfhmjky
+cloudinary.api-key=581431741721616
+cloudinary.api-secret=tTWWEBWYlrRUzRR2v6X0AAFNvjE
+cloudinary.secure=true
