--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=carniceria
 
-# Configuración de MySQL (Railway)
-spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:13189/bdcarniceria
-
+spring.datasource.url=jdbc:mysql://localhost:3306/bdcarniceria
 spring.datasource.username=root
-spring.datasource.password=XwKRuZidQEHyYcvxyATvSEFjsnaJoCBs
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -23,7 +25,7 @@ spring.mail.password=wnxhjcggtlqdduot
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-# Configuración para application.properties
+# Configuraci\u00c3\u00b3n para application.properties
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
 spring.servlet.multipart.enabled=true
