--- a/pom.xml
+++ b/pom.xml
@@ -187,26 +187,21 @@
         
         <!-- Plugin JaCoCo para cobertura de código -->
         <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.8</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>prepare-agent</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>report</id>
-                    <phase>test</phase>
-                    <goals>
-                        <goal>report</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
+  <groupId>org.jacoco</groupId>
+  <artifactId>jacoco-maven-plugin</artifactId>
+  <version>0.8.9</version> <!-- ¡Actualiza aquí! -->
+  <executions>
+    <execution>
+      <goals>
+        <goal>prepare-agent</goal>
+        <goal>report</goal>
+      </goals>
+    </execution>
+  </executions>
+</plugin>
         
         </plugins>
+        
     </build>
 
 </project>
