--- a/.github/workflows/CI_tipoPago.yml
+++ b/.github/workflows/CI_tipoPago.yml
@@ -85,7 +85,7 @@ jobs:
           
           El código está listo para fusionar a MAIN.
         to: degutierrezh02@gmail.com
-        from: Carnicería CI/CD
+        from: ${{ secrets.MAIL_USERNAME }}
         
     - name: Send Email Notification on Failure
       if: failure()
@@ -109,7 +109,7 @@ jobs:
           
           Por favor, revisa los logs para más detalles.
         to: degutierrezh02@gmail.com
-        from: Carnicería CI/CD
+        from: ${{ secrets.MAIL_USERNAME }}
 
   deploy:
     needs: test
@@ -154,4 +154,4 @@ jobs:
           
           La nueva versión está disponible.
         to: degutierrezh02@gmail.com
-        from: Carnicería CI/CD
+        from: ${{ secrets.MAIL_USERNAME }}
