--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 spring.application.name=carniceria
 
 # Configuración de MySQL (Railway)
-spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:13189/bdcarniceria
-
+spring.datasource.url=jdbc:mysql://localhost:3306/bdcarniceria
 spring.datasource.username=root
-spring.datasource.password=XwKRuZidQEHyYcvxyATvSEFjsnaJoCBs
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 
 # Configuraci\u00f3n para las im\u00e1genes
 spring.web.resources.static-locations=file:./images/
