--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,16 @@ cloudinary.cloud-name=dxtfhmjky
 cloudinary.api-key=581431741721616
 cloudinary.api-secret=tTWWEBWYlrRUzRR2v6X0AAFNvjE
 cloudinary.secure=true
+
+
+# Configuraci\u00f3n para pruebas
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Deshabilitar caracter\u00edsticas no necesarias en pruebas
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mail.MailSenderAutoConfiguration
