--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=carniceria
 
-spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:13189/bdcarniceria
+spring.datasource.url=jdbc:mysql://localhost:3306/bdcarniceria
 spring.datasource.username=root
-spring.datasource.password=XwKRuZidQEHyYcvxyATvSEFjsnaJoCBs
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
